--- a/1 - Le Basi di Tensorflow/classe_di_matematica_profonda.ipynb
+++ b/1 - Le Basi di Tensorflow/classe_di_matematica_profonda.ipynb
@@ -6,7 +6,7 @@
       "name": "Untitled43.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPZYnNXqM5czIcEKmdr6J9t",
+      "authorship_tag": "ABX9TyO0nS1KmNrvf14vDrNCy7yk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,7 +32,18 @@
         "colab_type": "text"
       },
       "source": [
-        "# Un'esempio di Classificazione"
+        "# Chi passerà matematica V2 ?\n",
+        "In questo notebook proveremo a migliorare il modello per classificare se uno studente verrà rimandato in matematica, con più informazioni e utilizzandole per addestrare una **Rete Neurale Profonda (DNN - Deep Neural Network)**."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "f01QRhYW5cM_",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Importiamo i moduli"
       ]
     },
     {
@@ -53,6 +64,17 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Q5oW23Fh5fEd",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Creiamo il Dataset\n",
+        "Importiamo il nuovo dataset, direttamente dal file csv, all'interno di un DataFrame."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "HqMMKIcIOvyG",
@@ -68,7 +90,7 @@
         "df = pd.read_csv(csv_url)\n",
         "df.head()"
       ],
-      "execution_count": 2,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -217,22 +239,48 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "S3bnNOf05sQs",
+        "colab_type": "text"
+      },
+      "source": [
+        "Questa volta abbiamo molte più features:\n",
+        "* **student_id**: codice identificativo dello studente.\n",
+        "* **sex**: sesso dello studente (F=Femmina, M=Maschio).\n",
+        "* **age**: età dello studente.\n",
+        "* **traveltime**: ore di viaggio per andare e tornare da scuola.\n",
+        "* **studytime**: ore di studio al giorno.\n",
+        "* **failures**: numero di volte che lo studene è stato rimandato in matematica in passato.\n",
+        "* **Medu e Fedu**: rispettivamente grado di istruzione della madre e del padre (0=nessuna, 1=scuola elementare, 2=licenza media, 3=diploma, 4=laurea).\n",
+        "* **paid**: indica se lo studente prende ripetizioni a pagamento.\n",
+        "* **higher**: indica se lo studente intende andare all'università.\n",
+        "* **internet**: indica se lo studente ha accesso ad internet a casa.\n",
+        "* **romatic**: indica se lo studente è in una relazione amorosa.\n",
+        "* **freetime**: numero di ore libere a settimana.\n",
+        "* **absences**: ore di assenze nella classe di matematica per il quadrimestre corrente.\n",
+        "* **promoted**: variabile booleana (True=1,False=0) che indica se lo studente è stato promosso.\n",
+        "\n",
+        "Alcune di queste informazioni sono in formato testuale e ciò non va bene dato che un computer comprende solo numeri. Utilizziamo il *One Hot Encoding* per codificare queste features utilizzando delle variabili dummies."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "se3rrDJpxh2Q",
         "colab_type": "code",
+        "outputId": "18886885-9574-41a9-c860-a291adb3ae1a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
-        },
-        "outputId": "18886885-9574-41a9-c860-a291adb3ae1a"
+        }
       },
       "source": [
         "to_encode = [\"sex\", \"paid\", \"higher\", \"internet\", \"romantic\"]\n",
         "df[to_encode] = pd.get_dummies(df[to_encode], drop_first=True)\n",
         "df.head()"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -381,6 +429,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "PgIarLAg8G8Z",
+        "colab_type": "text"
+      },
+      "source": [
+        "Adesso, esattamente come prima, creiamo gli array con features e target."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "60nNdvl_Q84Y",
@@ -395,6 +453,23 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "5URawIfd8MK2",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Creiamo il Modello \n",
+        "Creiamo la nostra prima Rete Neurale Profonda, per farlo basta aggiungere più strati all'oggett Sequential:\n",
+        "* Il primo strato è lo strato di input.\n",
+        "* L'ultimo strato è lo strato di output.\n",
+        "* Tutti gli strati intermedi sono gli strati nascosti del modello.\n",
+        "\n",
+        "Anche per gli strati nascosti dobbiamo specificare una funzione di attivazione, la più\n",
+        " comune è la *ReLu*, parleremo approfonditamente delle funzioni di attivazione nella prossima sezione."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "fnd5ukKLRNEc",
@@ -404,28 +479,38 @@
       "source": [
         "model = keras.models.Sequential([\n",
         "    keras.layers.Dense(128, input_shape=[X.shape[1]], activation=\"relu\"),\n",
-        "    keras.layers.Dense(128, input_shape=[X.shape[1]], activation=\"relu\"),\n",
-        "    keras.layers.Dense(1, input_shape=[X.shape[1]], activation=\"sigmoid\"),\n",
+        "    keras.layers.Dense(128, activation=\"relu\"),\n",
+        "    keras.layers.Dense(1, activation=\"sigmoid\"),\n",
         "])"
       ],
       "execution_count": 0,
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "NYnZZXtc_CjL",
+        "colab_type": "text"
+      },
+      "source": [
+        "Utilizzando il metodo *summary* possiamo vedere quanti sono i parametri (pesi e bias) del modello e quanti di questi il modello deve ottimizzare durante la fase di apprendimento."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "qtkwYgo3ygXQ",
         "colab_type": "code",
+        "outputId": "f8164bc2-6f41-41f7-fee3-b6c653a41205",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 269
-        },
-        "outputId": "f8164bc2-6f41-41f7-fee3-b6c653a41205"
+        }
       },
       "source": [
         "model.summary()"
       ],
-      "execution_count": 17,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -450,6 +535,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "7IAFI-ss_VsV",
+        "colab_type": "text"
+      },
+      "source": [
+        "Dato il numero di strati nascosti che abbiamo inserito, e il numero di neuroni (o nodi) per strato, il nostro modello dovrà apprendere un numero totale di 18.305 parametri. Configuriamo la fase di addestramento, questa volta usiamo **Adam** come algoritmo di ottimizzazione, parleremo approfonditamente degli algoritmi di ottimizzazione nella sezione apposita."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "1JgLMl2ySLMB",
@@ -461,6 +556,16 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "q2p4K8Pq_tdc",
+        "colab_type": "text"
+      },
+      "source": [
+        "Ora avviamo l'addestramento per 200 epoche."
+      ]
     },
     {
       "cell_type": "code",
@@ -476,7 +581,7 @@
       "source": [
         "model.fit(X, y, epochs=200)"
       ],
-      "execution_count": 19,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -899,6 +1004,36 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "tSOdpPSI_4gp",
+        "colab_type": "text"
+      },
+      "source": [
+        "Come vedi, utilizzando più strati e soprattutto più informazioni, il nostro modello ha ottenuto dei risultati decisamente superiori rispetto a quello precedente."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "IzBgvhNm_wPa",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Testiamo la Rete\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "4M8H-vUkABnM",
+        "colab_type": "text"
+      },
+      "source": [
+        "Mettiamo all'opera la rete per predire se 3 studenti verranno promossi in matematica, organizziamo le informazioni degli studenti su 3 liste python, che verranno a loro volta inserite in un'altra lista, ricordiamoci di rispettare l'ordine delle colonne (primo valore=sex, secondo valore=age, terzo valore=traveltime ecc...)"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "9ckz6ortSfgd",
@@ -917,7 +1052,7 @@
         "y_pred = model.predict(X_test)\n",
         "np.round(y_pred, 3)"
       ],
-      "execution_count": 29,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -936,6 +1071,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "F1-eer5uAfhH",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Qual è la nuova \"Formula della Promozione\" ?\n",
+        "In questo caso la risposta è \"BOH\". E' difficile, se non impossibile, interpretare i risultati di una rete neurale, a causa di ciò che avviene negli strati nascosti e nel numero esorbitante di parametri."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "g9-ft4cIS_X5",
@@ -949,7 +1095,7 @@
       "source": [
         "model.weights"
       ],
-      "execution_count": 117,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
