--- a/4 - Tensorflow Avanzato/lambda_layers.ipynb
+++ b/4 - Tensorflow Avanzato/lambda_layers.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled47.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPAB/LMDmVw5vh9rJThQD03",
+      "authorship_tag": "ABX9TyOwvpfHOO6AAtIvSf57jGiS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,7 +32,18 @@
         "colab_type": "text"
       },
       "source": [
-        "## Strati Lambda"
+        "# Strati Lambda\n",
+        "In questo notebook addestreremo una rete neurale per affrontare un semplicissimo problema di computer vision: riconoscere cifre scritte a mano. Inoltre vedremo come utilizzare degli **Strati Lambda** per eseguire del codice custom all'interno della rete neurale"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "W3UYKGVzMihH",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Importiamo i Moduli"
       ]
     },
     {
@@ -53,8 +64,19 @@
         "\n",
         "from time import time"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ZN7_P3lcMmUG",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Prepariamo i Dati\n",
+        "Il dataset che utilizzeremo è il MNIST, una raccolta di immagini in bianco e nero di cifre scritte a mano. Per importare il dataset possiamo sfruttare il modulo *tensorflow_datasets*."
+      ]
     },
     {
       "cell_type": "code",
@@ -66,8 +88,18 @@
       "source": [
         "dataset = tfds.load('mnist', split='train', shuffle_files=True)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "IOKYxu9AM7zI",
+        "colab_type": "text"
+      },
+      "source": [
+        "Definiamo una funzione che legge gli esempi dal dataset e li inserisce all'interno di due array numpy, uno con le features e un'altro con i target. Utilizziamo il parametro opzionale *num_samples* per limitare il numero di esempi da utilizzare."
+      ]
     },
     {
       "cell_type": "code",
@@ -94,8 +126,18 @@
         "\n",
         "  return images, labels"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "XzBDy11bNN9T",
+        "colab_type": "text"
+      },
+      "source": [
+        "Adesso utilizziamo la funzione per creare il dataset."
+      ]
     },
     {
       "cell_type": "code",
@@ -110,12 +152,12 @@
       },
       "source": [
         "images, labels = load_data(dataset)\n",
-        "num_classes = np.unique(labels).shape[0]\n",
+        "num_classes = np.unique(labels).shape[0] # contiamo il numero di classi uniche\n",
         "print(\"Numero di esempi: %d\" % images.shape[0])\n",
         "print(\"Dimensioni immagine: %s\" % str(images[0].shape))\n",
         "print(\"Classi = %d %s\" % (num_classes, np.unique(labels)))"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -129,6 +171,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "lUy7oV53NgmE",
+        "colab_type": "text"
+      },
+      "source": [
+        "Nel caso di classificazioni multiclasse, dobbiamo codificare il target utilizzando il **one-hot encoding**, con tnsorflow possiamo farlo tramite la funzione *one_hot*."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "q5vEv1dZn_lZ",
@@ -139,8 +191,18 @@
         "X = images\n",
         "y = tf.one_hot(labels, num_classes).numpy()"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ZM8NKwpXNy7J",
+        "colab_type": "text"
+      },
+      "source": [
+        "Adesso dividiamo il dataset in Train Set e Test Set."
+      ]
     },
     {
       "cell_type": "code",
@@ -152,7 +214,7 @@
       "source": [
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -162,7 +224,8 @@
         "colab_type": "text"
       },
       "source": [
-        "### Flattening delle Immagini"
+        "### Flattening delle Immagini\n",
+        "L'input della nostra rete neurale deve essere sempre un vettore, mentre un'immagine è una matrice di pixel, per convertire una matrice in un vettore possiamo eseguire il **Flattening**, che consiste nel riorganizzare le varie righe del dataset in un unica riga in successione. Possiamo farlo utilizzando il metodo reshape."
       ]
     },
     {
@@ -182,7 +245,7 @@
         "\n",
         "X_train_1d.shape"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -196,6 +259,16 @@
           },
           "execution_count": 7
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Xc_03OjgOdrf",
+        "colab_type": "text"
+      },
+      "source": [
+        "Per assicurarci di non aver *rotto* le immagini, eseguiamo la trasformarzione inversa e proviamo a stampare un'immagine."
       ]
     },
     {
@@ -213,7 +286,7 @@
         "plt.imshow(X_train_1d[0].reshape(28,28))\n",
         "print(np.argmax(y_train[0]))"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -244,7 +317,8 @@
         "colab_type": "text"
       },
       "source": [
-        "### Addestramento della Rete Neurale"
+        "## Addestramento della Rete Neurale\n",
+        "Definiamo e addestriamo la rete neurale, trattandosi di un problema di classificazione multiclasse, la funzione di attivazione dell'ultimo strato deve essere la sigmoide, mentre la funzione di costo da utilizzare è la Categorical Crossentropy."
       ]
     },
     {
@@ -268,7 +342,7 @@
         "\n",
         "model.fit(X_train_1d, y_train, epochs=10)"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -313,11 +387,22 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "RFdGG11WO_79",
+        "colab_type": "text"
+      },
+      "source": [
+        "Il risultato dell'addestramento è davvero molto scarso."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "mOuOKfVvoo6k",
         "colab_type": "text"
       },
       "source": [
-        "### Normalizzazione delle immagini"
+        "### Normalizzazione delle immagini\n",
+        "Una rete neurale apprende molti pesi tutti di dimensione abbastanza piccola, e utilizzre delle features con valori elevati può rallentare, se non addirittura rompere, la fase di addestramento. Per questo motivo è sempre consigliabile normalizzare o standardizzare il dataset. Per normalizzare delle immagini è sufficiente dividere per 255 (il valore massimo che un pixel può avere) in modo tale da portare il range di valori a 0-1."
       ]
     },
     {
@@ -330,8 +415,18 @@
       "source": [
         "X_train_norm = X_train_1d/255"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "1ps9xjNGQvd8",
+        "colab_type": "text"
+      },
+      "source": [
+        "Proviamo ora ad addestrare nuovamente la stessa rete neurale di prima."
+      ]
     },
     {
       "cell_type": "code",
@@ -354,7 +449,7 @@
         "\n",
         "model.fit(X_train_norm, y_train, epochs=10)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -399,6 +494,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "oZGZ4FmjQy4b",
+        "colab_type": "text"
+      },
+      "source": [
+        "Come vedi ora il risultato è totalmente differente."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "SVqtq5mJp6_Z",
         "colab_type": "text"
       },
@@ -409,11 +514,22 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "l9FYpK9nQ2q0",
+        "colab_type": "text"
+      },
+      "source": [
+        "Vediamo ora come possiamo utilizzare gli strati lambda per incorporare alcuni calcoli all'interno degli stessi strati della rete."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "kRx49wt2r7qO",
         "colab_type": "text"
       },
       "source": [
-        "### Normalizzazione"
+        "### Normalizzazione\n",
+        "Aggiungiamo uno strato lambda prima dello strato di input, il cui scopo è normalizzare le immagini, dopodichè eseguiamo l'addestramento sul Train Set non normalizzato."
       ]
     },
     {
@@ -438,7 +554,7 @@
         "\n",
         "model.fit(X_train_1d, y_train, epochs=10)"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -483,11 +599,22 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "4iwcbCXdRNyX",
+        "colab_type": "text"
+      },
+      "source": [
+        "Come vedi il risultato è lo stesso di prima, dato che anche in questo caso la normalizzazione viene eseguita, ma avviene all'interno della rete neurale."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "cxodJcsbr-9r",
         "colab_type": "text"
       },
       "source": [
-        "### Flattening"
+        "### Flattening\n",
+        "Aggiungiamo un'ulteriore strato Lambda, per eseguire il flattening delle immagini e addestriamo la rete sul Train Set originale, cioè quello in cui ogni immagine è rappresentata da una matrice."
       ]
     },
     {
@@ -513,7 +640,7 @@
         "\n",
         "model.fit(X_train, y_train, epochs=10)"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -556,6 +683,63 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "R-YoPN-ZRny_",
+        "colab_type": "text"
+      },
+      "source": [
+        "Il risultato è semrpre lo stesso, abbiamo trasformato la nostra rete neurale in un modello end-to-end. Per finire valutiamo il nostro modello sul Test Set."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6diMCZk8s3n2",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 52
+        },
+        "outputId": "dc4cebf8-963e-4f31-d768-95373af7d026"
+      },
+      "source": [
+        "model.evaluate(X_test, y_test)"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "375/375 [==============================] - 1s 2ms/step - loss: 0.1898 - accuracy: 0.9461\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[0.18978886306285858, 0.9460833072662354]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "zW4yNf1vR5kI",
+        "colab_type": "text"
+      },
+      "source": [
+        "Non c'è overfitting, quindi il modello va bene, quindi possiamo pure utilizzare la rete per riconoscere nuove immagini (non avendo altre immagini utilizzerò sempre il Test Set)."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "iTNsNiLqsTC5",
@@ -569,7 +753,7 @@
       "source": [
         "model.predict_classes(X_test)"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -600,43 +784,6 @@
             "tags": []
           },
           "execution_count": 14
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "6diMCZk8s3n2",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 52
-        },
-        "outputId": "dc4cebf8-963e-4f31-d768-95373af7d026"
-      },
-      "source": [
-        "model.evaluate(X_test, y_test)"
-      ],
-      "execution_count": 15,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "375/375 [==============================] - 1s 2ms/step - loss: 0.1898 - accuracy: 0.9461\n"
-          ],
-          "name": "stdout"
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[0.18978886306285858, 0.9460833072662354]"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 15
         }
       ]
     }
