--- a/4 - Tensorflow Avanzato/callbacks.ipynb
+++ b/4 - Tensorflow Avanzato/callbacks.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNGBPuL4WTb9NQqRQ2FjfT0",
+      "authorship_tag": "ABX9TyPZlpHfaOv1e2N9tMP7LNSt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,18 @@
         "colab_type": "text"
       },
       "source": [
-        "# Callbacks"
+        "# Callbacks\n",
+        "I callback ci permettono di eseguire del codice durante le varie fasi dell'addestramento di una Rete Neurale. In questo notebook vedremo come utilizzarli."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "lhm1zCXzz1FD",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Importiamo i Moduli"
       ]
     },
     {
@@ -55,8 +66,18 @@
         "\n",
         "from time import time"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "5tYRKeHy0siW",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Prepariamo i Dati"
+      ]
     },
     {
       "cell_type": "code",
@@ -93,7 +114,7 @@
         "\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -103,7 +124,8 @@
         "colab_type": "text"
       },
       "source": [
-        "## Costruiamo la Rete Neurale"
+        "## Costruiamo la Rete Neurale\n",
+        "Dato che dovremo addestrare la Rete più volte, definiamo una funzione che ci permette di definirla e compilarla."
       ]
     },
     {
@@ -126,7 +148,7 @@
         "\n",
         "  return model"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -137,7 +159,7 @@
       },
       "source": [
         "## Custom Callbacks\n",
-        "https://www.tensorflow.org/api_docs/python/tf/keras/callbacks/Callback"
+        "Un Custom Callback ci permette di eseguire del codice arbitrario durante la fase di addestramento. Per creare il nostro callback dobbiamo definire una nuova classe derivante dalla classe Callback di Keras, questa classe ha diversi metodi che ci permettono di eseguire del codice durante le varie fasi dell'addestramento, [qui](https://www.tensorflow.org/api_docs/python/tf/keras/callbacks/Callback) puoi trovare l'elenco di tutti i metodi che puoi sfruttare."
       ]
     },
     {
@@ -153,21 +175,34 @@
         "\n",
         "class MyCustomCallback(tf.keras.callbacks.Callback):\n",
         "\n",
+        "  # Viene eseguito al termine di ogni epoca\n",
         "  def on_epoch_end(self, epoch, logs=None):\n",
         "    metrics_test = model.evaluate(X_test, y_test)\n",
         "    print(\"Epoca %d: Test loss=%.4f, Test accuracy=%.2f\" % (epoch+1, metrics_test[0], metrics_test[1]))\n",
         "\n",
+        "  # Viene eseguito all'avvio dell'addestramento \n",
         "  def on_train_begin(self, logs=None):\n",
         "    print(\"Avvio dell'addestramento...\")\n",
         "    self.start_time = time()\n",
         "\n",
+        "  # Viene eseguito al termine dell'addestramento\n",
         "  def on_train_end(self, logs=None):\n",
         "    exec_time = time()-self.start_time\n",
         "    print(\"\\n+++ Addestramento completato in: %d minuti e %d secondi +++\" % (exec_time/60, exec_time%60))\n",
-        "    output.eval_js('new Audio(\"https://raw.githubusercontent.com/ProfAI/tf00/master/gilfoyle_alert.mp3\").play()')"
+        "    output.eval_js('new Audio(\"https://raw.githubusercontent.com/ProfAI/tf00/master/gilfoyle_alert.mp3\").play()') # avviamo un suono"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Dz3nf81c3SC6",
+        "colab_type": "text"
+      },
+      "source": [
+        "ora possiamo passare un'istanza del callback all'interno del parametro callbacks del metodo fit."
+      ]
     },
     {
       "cell_type": "code",
@@ -181,18 +216,10 @@
         "outputId": "ca085f9d-64ef-4e75-b45e-911f176088fc"
       },
       "source": [
-        "model = tf.keras.models.Sequential()\n",
-        "model.add(tf.keras.layers.Lambda(lambda x: tf.reshape(x, [x.shape[0], x.shape[1]*x.shape[2]])))\n",
-        "model.add(tf.keras.layers.Lambda(lambda x: x/255))\n",
-        "model.add(tf.keras.layers.Dense(32, activation='relu'))\n",
-        "model.add(tf.keras.layers.Dense(32, activation='relu'))\n",
-        "model.add(tf.keras.layers.Dense(num_classes, activation='softmax'))\n",
-        "\n",
-        "model.compile(loss='categorical_crossentropy', optimizer='sgd', metrics=['accuracy'])\n",
-        "\n",
+        "model = build_model()\n",
         "model.fit(X_train, y_train, epochs=10, callbacks=[MyCustomCallback()])"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -263,7 +290,8 @@
         "colab_type": "text"
       },
       "source": [
-        "## History Callbacks"
+        "## History Callbacks\n",
+        "Oltre ai Custom Callbacks, possiamo anche sfruttare dei callback che hanno delle funzioni predefinite. Uno di questi è l'History Callback, che ci permette ad accedere ai valori delle metriche ottenute al termine delle varie epoche."
       ]
     },
     {
@@ -278,10 +306,10 @@
         "outputId": "2b46a8fb-be10-4758-db2b-8206745b221b"
       },
       "source": [
-        "history = tf.keras.callbacks.History()\n",
+        "model = build_model()\n",
         "model.fit(X_train, y_train, epochs=10, callbacks=[tf.keras.callbacks.History()])"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -324,6 +352,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "zz7RyHNU8aP7",
+        "colab_type": "text"
+      },
+      "source": [
+        "Queste informazioni sono utili per mostrare graficamente l'evoluzione delle metriche durante l'addestramento."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "0du92IwS85_d",
@@ -347,7 +385,7 @@
         "plt.legend()\n",
         "plt.show()"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -371,7 +409,8 @@
         "colab_type": "text"
       },
       "source": [
-        "## Early Stopping Callbacks"
+        "## Early Stopping Callbacks\n",
+        "Early Stopping è una tecnica che consiste nell'interrompere l'addestramento in maniera preventiva se il modello non sta migliorando."
       ]
     },
     {
@@ -395,7 +434,7 @@
         "\n",
         "model.fit(X_train, y_train, epochs=10, callbacks=[early_stopping])"
       ],
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -434,45 +473,23 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "AD_PKum-8x3F",
+        "colab_type": "text"
+      },
+      "source": [
+        "Così facendo abbiamo indicato di interrompere l'addestramento se dopo almeno *patience* epoche il valore della *loss* non è migliorato di almeno *min_delta*, e in tal caso di ripristinare i pesi che hanno portato al migliore risultato."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "X9uElDS6_xqS",
         "colab_type": "text"
       },
       "source": [
-        "## Model Checkpoint Callbacks"
+        "## Model Checkpoint Callbacks\n",
+        "I checkpoint sono uno strumento estremamente utile, che ci permette di fare un backup su disco della rete neurale al termine di ogni epoca, o di un'altro intervallo temporale definito da noi."
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "uRPfDCk6BduQ",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "model.save(\"model.h5\")"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "kr6OM9ylB5ZA",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "X_train_1d = X_train.reshape(X_train.shape[0], X_train.shape[1]*X_train.shape[2])/255\n",
-        "\n",
-        "model = tf.keras.models.Sequential()\n",
-        "model.add(tf.keras.layers.Dense(32, activation='relu', input_shape=[X_train_1d.shape[1]]))\n",
-        "model.add(tf.keras.layers.Dense(32, activation='relu'))\n",
-        "model.add(tf.keras.layers.Dense(num_classes, activation='softmax'))\n",
-        "\n",
-        "model.compile(loss='categorical_crossentropy', optimizer='sgd', metrics=['accuracy'])"
-      ],
-      "execution_count": 0,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -498,7 +515,7 @@
         "\n",
         "model.fit(X_train, y_train, epochs=10, callbacks=[model_checkpoint])"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -539,6 +556,42 @@
           "execution_count": 9
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "xWyjvwI4-JmV",
+        "colab_type": "text"
+      },
+      "source": [
+        "La rete viene salvata con formato h5, nel prossimo notebook vedremo come ripristinarla."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Q9M5wKek9cxp",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Utilizzare più Callbacks\n",
+        "Come avrai notato, l'input dell parametro *callbacks* deve essere una lista di callback, infatti possiamo utilizzare anche più callback, custom e/o predefiniti, durante l'addestramento, per una lista estensiva di tutti i callback disponibili puoi far rifermento alla documentazione di Tensorflow.\n",
+        "<br>\n",
+        "[Tutti i Callback di tf.keras](https://www.tensorflow.org/api_docs/python/tf/keras/callbacks])"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-BSRoo1u-Bj-",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
