--- a/4 - Tensorflow Avanzato/model_export.ipynb
+++ b/4 - Tensorflow Avanzato/model_export.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled49.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPxlD0uNwzjRYBdjvwkKenR",
+      "authorship_tag": "ABX9TyOMWMlugiqpV5N9uhEemblU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -274,6 +274,27 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ZfLmBzkw-iMp",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Esportare una Rete Neurale\n",
+        "Nel notebook precedente abbiamo visto come fare un backup della Rete Neurale utilizzando i Checkpoint, prima di vedere come re-importare la Rete salvata su disco, vediamo come poter salvare la Rete completa una volta terminato l'addestramento."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "IWPphO7J-3bV",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Importiamo i Moduli"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "-yW2x9FqDrQb",
@@ -291,8 +312,18 @@
         "\n",
         "from time import time"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "8qSgLM76-5GT",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Prepariamo i Dati"
+      ]
     },
     {
       "cell_type": "code",
@@ -343,7 +374,7 @@
         "\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2)"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -391,6 +422,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "FcYiWwjf-7Ri",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Costruiamo la Rete Neurale"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "Jzmsi_9rD4lC",
@@ -410,7 +451,7 @@
         "\n",
         "  return model"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -428,7 +469,7 @@
         "model = build_model()\n",
         "model.fit(X_train, y_train, epochs=20)"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -504,7 +545,7 @@
       "source": [
         "model.evaluate(X_test, y_test)"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -528,6 +569,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "RmIy7Bbm_C7y",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Esportiamo la Rete\n",
+        "Esportare la Rete su disco è estremamente semplice, tutto ciò che dobbiamo fare è utilizzare il metodo *save*, specificando il percorso al file h5 che verrà creato per immagazzinare il modello."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "yaa977ULEVaB",
@@ -537,20 +589,7 @@
       "source": [
         "model.save(\"model_mnist.h5\")"
       ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "M0hrcIfbEYfM",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     }
   ]
